--- a/src/features/projects/screens/HomeScreen.astro
+++ b/src/features/projects/screens/HomeScreen.astro
@@ -6,7 +6,7 @@ import type { LanguageCode } from '@/i18n/ui';
 import { getRelativeLocaleUrl } from 'astro:i18n';
 import { Calendar, Dumbbell } from 'lucide-react';
 
-import heroImage from '@/assets/user-hero.webp';
+import heroImage from '@/assets/Cheryl-gray.jpeg';
 import { Image } from 'astro:assets';
 import FeaturedProjectPreview from '../components/FeaturedProjectPreview.astro';
 import type { TranslatedProject, TranslatedSkill } from '../type';
@@ -92,7 +92,7 @@ const {
       >
         <Image
           src={heroImage}
-          alt={'User profile image'}
+          alt={'Portrait of Cheryl'}
           width={600}
           height={368}
           densities={[1, 1.5, 2]}
